--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     },
     "author": "Nima Keshavarzian",
     "license": "ISC",
-    "keywords": ["Wordpress", "template", "news", "minimal", "neomorphism"],
+    "keywords": [
+        "Wordpress",
+        "template",
+        "news",
+        "minimal",
+        "neomorphism"
+    ],
     "description": "",
-    "devDependencies": {
-        "css-loader": "^6.2.0",
-        "style-loader": "^3.2.1",
-        "webpack": "^5.46.0",
-        "webpack-cli": "^4.7.2"
-    }
+    "devDependencies": {}
 }
