--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "focus",
-    "version": "1.0.0.beta0",
+    "version": "1.0.0",
     "main": "index.js",
     "scripts": {
         "build": "webpack",
